<resources>
    <string name="app_name">Refreshed</string>
    <string name="action_sources">Select sources</string>
    <string name="news_attribution">News from newsapi.org</string>
    <string name="engadget" translatable="false">Engadget</string>
    <string name="ign" translatable="false">IGN</string>
    <string name="polygon" translatable="false">Polygon</string>
    <string name="techcrunch" translatable="false">Techcrunch</string>

    <string name="menu_night_mode">Night mode</string>
    <string name="menu_night_mode_system">Follow system</string>
    <string name="menu_night_mode_day">Day (always)</string>
    <string name="menu_night_mode_night">Night (always)</string>
    <string name="menu_night_mode_auto">Auto</string>

    <string name="nav_menu_news">News</string>
    <string name="nav_menu_chuck">Chuck Norris Jokes</string>
    <string name="nav_menu_xkcd" translatable="false">xkcd</string>

    <!--Chuck Norris jokes strings-->
    <string name="default_text">Click to load joke</string>
    <string name="loading_text">Loading...</string>
    <string name="firstname_hint" translatable="false">Chuck</string>
    <string name="lastname_hint" translatable="false">Norris</string>
    <string name="filters">Filters:</string>
    <string name="explicit">Explicit</string>
    <string name="nerdy" translatable="false">Nerdy</string>
    <string name="query_error">Chuck Norris never loses connectivity, check your connection.</string>

    <!--xkcd strings-->
    <string name="random_button">Load random xkcd</string>
    <string name="goto_specific">Go to a specific xkcd</string>
    <string name="goto_explain">Explain xkcd</string>
    <string name="goto_previous">Previous</string>
    <string name="goto_next">Next</string>
    <string name="alt_text">Show alt text</string>
    <string name="confirm">OK</string>
    <string name="cancel">Cancel</string>
    <string name="choose_specific_title">Select which xkcd to view</string>
    <string name="waiting_for_download_message">Please wait for the image to be downloaded!</string>
    <string name="share_menu_entry">Share this xkcd</string>
</resources>
