<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright (C) 2015 The Android Open Source Project
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~      http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:title="@string/nav_menu_news" >
            <menu>
                <item
                    android:id="@+id/nav_engadget"
                    android:title="@string/engadget"
                    android:icon="@drawable/ic_menu"/>
                <item
                    android:id="@+id/nav_ign"
                    android:title="@string/ign"
                    android:icon="@drawable/ic_menu"/>
                <item
                    android:id="@+id/nav_polygon"
                    android:title="@string/polygon"
                    android:icon="@drawable/ic_menu"/>
                <item
                    android:id="@+id/nav_techcrunch"
                    android:title="@string/techcrunch"
                    android:icon="@drawable/ic_menu"/>
            </menu>
        </item>
        <item
            android:id="@+id/nav_chuck"
            android:icon="@drawable/ic_menu"
            android:title="@string/nav_menu_chuck" />
        <item
            android:id="@+id/nav_xkcd"
            android:icon="@drawable/ic_menu"
            android:title="@string/nav_menu_xkcd" />
    </group>

</menu>
