<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <EditText
        android:id="@+id/edit_first"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:layout_gravity="center_horizontal"
        android:minWidth="135dp"
        android:inputType="text"
        android:hint="@string/firstname_hint"
        android:layout_below="@id/appbar" />
    <EditText
        android:id="@+id/edit_last"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:layout_gravity="center_horizontal"
        android:minWidth="135dp"
        android:inputType="text"
        android:hint="@string/lastname_hint"
        android:layout_below="@id/appbar"
        android:layout_toEndOf="@id/edit_first"
        android:layout_toRightOf="@id/edit_first"/>

    <LinearLayout
        android:id="@+id/ll_joke_out"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:orientation="horizontal"
        android:layout_below="@id/edit_first"
        android:gravity="fill_horizontal">

        <TextView
            android:id="@+id/tv_filters"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:textStyle="bold"
            android:text="@string/filters" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:text="@string/explicit"/>

        <CheckBox
            android:id="@+id/explicit_checkbox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginEnd="10dp"
            android:tag="explicit" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:text="@string/nerdy"/>

        <CheckBox
            android:id="@+id/nerdy_checkbox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginEnd="10dp"
            android:tag="nerdy"/>
    </LinearLayout>

    <FrameLayout
        android:id="@+id/frame"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/ll_joke_out">

        <TextView
            android:id="@+id/tv_chuck"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_margin="@dimen/textview_margin"
            android:background="#11000000"
            android:text="@string/default_text"
            android:textColor="@color/colorPrimary"
            android:textSize="20sp"
            android:padding="5dp"/>
        <TextView
            android:id="@+id/loading_text"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_margin="@dimen/textview_margin"
            android:background="#11000000"
            android:text="@string/loading_text"
            android:textColor="@color/colorPrimary"
            android:textSize="20sp"
            android:visibility="gone"/>
        <ProgressBar
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:visibility="gone"
            android:id="@+id/loading_indicator"/>
    </FrameLayout>


</RelativeLayout>
